Tried optional questions

--- a/Tutorials/Day_2/Tuto_2.3_Signal_consistency_and_significance.ipynb
+++ b/Tutorials/Day_2/Tuto_2.3_Signal_consistency_and_significance.ipynb
@@ -870,7 +870,7 @@
    "outputs": [],
    "source": [
     "from gwosc.datasets import event_at_gps\n",
-    "print(.event_at_gps())"
+    "print(event_at_gps())"
    ]
   },
   {
