Completed tutorials for day 3

--- a/Tutorials/Day_3/Tuto_3.3_Discovering_and_using_published_posterior_samples.ipynb
+++ b/Tutorials/Day_3/Tuto_3.3_Discovering_and_using_published_posterior_samples.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "Collapsed": "false",
     "id": "Z2fAXT1v3DkH",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "Collapsed": "false",
     "id": "DiR88NzK3DkM",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "Collapsed": "false",
     "colab": {
@@ -111,21 +111,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-04-05 15:04:49--  https://dcc.ligo.org/LIGO-P1800370/public/GW150914_GWTC-1.hdf5\n",
-      "Loaded CA certificate '/etc/ssl/certs/ca-certificates.crt'\n",
-      "Resolving dcc.ligo.org (dcc.ligo.org)... 131.215.125.144\n",
+      "--2024-06-28 10:30:37--  https://dcc.ligo.org/LIGO-P1800370/public/GW150914_GWTC-1.hdf5\n",
+      "Resolving dcc.ligo.org (dcc.ligo.org)... 131.215.125.144, 64:ff9b::83d7:7d90\n",
       "Connecting to dcc.ligo.org (dcc.ligo.org)|131.215.125.144|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
       "Location: https://dcc.ligo.org/public/0157/P1800370/005/GW150914_GWTC-1.hdf5 [following]\n",
-      "--2024-04-05 15:04:50--  https://dcc.ligo.org/public/0157/P1800370/005/GW150914_GWTC-1.hdf5\n",
+      "--2024-06-28 10:30:40--  https://dcc.ligo.org/public/0157/P1800370/005/GW150914_GWTC-1.hdf5\n",
       "Reusing existing connection to dcc.ligo.org:443.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 7026464 (6.7M)\n",
-      "Saving to: ‘GW150914_GWTC-1.hdf5’\n",
+      "Saving to: ‘GW150914_GWTC-1.hdf5.1’\n",
       "\n",
-      "GW150914_GWTC-1.hdf 100%[===================>]   6.70M  3.89MB/s    in 1.7s    \n",
+      "GW150914_GWTC-1.hdf 100%[===================>]   6.70M  1.07MB/s    in 6.3s    \n",
       "\n",
-      "2024-04-05 15:04:52 (3.89 MB/s) - ‘GW150914_GWTC-1.hdf5’ saved [7026464/7026464]\n",
+      "2024-06-28 10:30:47 (1.07 MB/s) - ‘GW150914_GWTC-1.hdf5.1’ saved [7026464/7026464]\n",
       "\n"
      ]
     }
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "Collapsed": "false",
     "id": "LlIkUSXc3DkR",
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "Collapsed": "false",
     "colab": {
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "Collapsed": "false",
     "colab": {
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "Collapsed": "false",
     "id": "su0I7kOC3Dkc",
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "Collapsed": "false",
     "colab": {
@@ -506,7 +505,7 @@
        "[8350 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "Collapsed": "false",
     "colab": {
@@ -579,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "Collapsed": "false",
     "colab": {
@@ -627,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "Collapsed": "false",
     "id": "hG06jTn53Dkr",
@@ -651,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "Collapsed": "false",
     "id": "RS7AD2dX3Dkv",
@@ -664,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "Collapsed": "false",
     "id": "29S-5y-k3Dkx",
@@ -689,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "Collapsed": "false",
     "colab": {
@@ -730,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -773,10 +772,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of the effective spin is  = -0.015181477819382323 Msun\n",
+      "The 90% confidence interval for the effective spin is -0.14138898362283844 - 0.10932272798368624 Msun\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bilby\n",
+    "# the eff_spin\n",
+    "chi_eff = (samples['m1_detector_frame_Msun'] * samples['spin1']*samples['costilt1'] + samples['m2_detector_frame_Msun'] * samples['spin2']*samples['costilt2'])/(samples['m1_detector_frame_Msun'] + samples['m2_detector_frame_Msun'] )\n",
+    "        \n",
+    "# initialize a SampleSummary object to describe the chirp mass posterior samples\n",
+    "chi_eff_samples_summary = bilby.core.utils.SamplesSummary(samples=chi_eff, average='mean')\n",
+    "print('The mean of the effective spin is  = {} Msun'.format(chi_eff_samples_summary.mean))\n",
+    "print('The 90% confidence interval for the effective spin is {} - {} Msun'.format(chi_eff_samples_summary.lower_absolute_credible_interval,\n",
+    "                                                                        chi_eff_samples_summary.upper_absolute_credible_interval))"
+   ]
   }
  ],
  "metadata": {
